--- a/debian/rules
+++ b/debian/rules
@@ -19,7 +19,9 @@ XSLT_CMD       = xsltproc -''-nonet  -''-param man.charmap.use.subset "0"
 DB2MAN         = /usr/share/sgml/docbook/stylesheet/xsl/nwalsh/manpages/docbook.xsl
 
 # Flags to GCC
-CFLAGS        += -I$(DEB_STOOLS) -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_GNU_SOURCE
+COMP_DEFAULT = gzip
+CFLAGS       = -I$(DEB_STOOLS) -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE \
+		-D_GNU_SOURCE -DCOMP_DEFAULT=\\\"$(COMP_DEFAULT)\\\"
 
 # The build directory is squashfs-tools
 DEB_MAKE_INVOKE := cd $(DEB_STOOLS) && $(DEB_MAKE_INVOKE)
